# module-3-template

./: .gitignore  README.md  download_data.sh  main.py  overview.md  pyproject.toml  requirements.txt
notebooks/: session10-rag-multi-document.py  session10-validation-and-tools.py  session8-llm-apis.py  session9-pdf-extraction.py
