[project]
name = "module-3-template"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.9",
    "langchain-text-splitters>=1.1.0",
    "openai>=2.20.0",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "sentence-transformers>=5.2.2",
]
